crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_js_worker__tests__Postgres_trimmed_to_1_advance_1.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "sanitize_json(&json!({\n    \"version\": advance.version.0, \"outcome\": format!(\"{:?}\", advance.outcome),\n    \"trim_to\": trim_to, \"requested_captured_writes_len\":\n    requested.captured_writes.len(), \"replayed_captured_writes_len\":\n    replay.captured_writes.len(),\n}))"
---
{
  "version": 3,
  "outcome": "Applied",
  "trim_to": 1,
  "requested_captured_writes_len": 1,
  "replayed_captured_writes_len": 2
}
