crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_js_worker__tests__Postgres_trimmed_to_1_log_5.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "ExecutionLogSanitized::from(log)"
---
{
  "execution_id": "E_00000000000000000000000001",
  "events": [
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "created": {
          "ffqn": "test:pkg/ifc.call-stub",
          "params": [
            []
          ],
          "parent": null,
          "scheduled_at": "1970-01-01T00:00:00Z",
          "component_id": {
            "component_type": "workflow",
            "name": "test_js_workflow",
            "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "deployment_id": "Dep_00000000000000000000000000",
          "metadata": {},
          "scheduled_by": null
        }
      },
      "version": 0
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": "paused",
      "version": 1
    },
    {
      "created_at": "1970-01-01T00:00:00.200Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_create",
            "join_set_id": "g:1"
          }
        }
      },
      "version": 2
    },
    {
      "created_at": "1970-01-01T00:00:00.400Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "g:1",
            "request": {
              "type": "child_execution_request",
              "child_execution_id": "E_00000000000000000000000001.g:1_1",
              "target_ffqn": "testing:stub-activity/activity.foo",
              "params": [
                "test-input"
              ],
              "result": {
                "Ok": null
              }
            }
          }
        }
      },
      "version": 3
    },
    {
      "created_at": "1970-01-01T00:00:00.800Z",
      "event": {
        "history_event": {
          "event": {
            "type": "stub",
            "target_execution_id": "E_00000000000000000000000001.g:1_1",
            "retval_hash": "011f9f1089426c4e2d1d6c761441181fba8e690f2baeccde7036a92c7d49d6b0e1",
            "result": {
              "Ok": null
            }
          }
        }
      },
      "version": 4
    },
    {
      "created_at": "1970-01-01T00:00:01Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next",
            "join_set_id": "g:1",
            "run_expires_at": "1970-01-01T00:00:01Z",
            "requested_ffqn": null,
            "closing": false
          }
        }
      },
      "version": 5
    }
  ],
  "responses": [
    {
      "created_at": "1970-01-01T00:00:00.600Z",
      "event": {
        "join_set_id": "g:1",
        "event": {
          "type": "child_execution_finished",
          "child_execution_id": "E_00000000000000000000000001.g:1_1",
          "finished_version": 1,
          "result": {
            "ok": {
              "type": "string",
              "value": "hello"
            }
          }
        }
      }
    }
  ],
  "next_version": 6,
  "pending_state": {
    "status": "paused",
    "PendingAt": {
      "scheduled_at": "1970-01-01T00:00:01Z",
      "last_lock": null
    }
  },
  "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
}
