crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_js_worker__tests__Postgres_trimmed_to_1_replay_4.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "redact_component_digest(serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "AppendBatch": {
        "current_time": "1970-01-01T00:00:00.700Z",
        "batch": [
          {
            "created_at": "1970-01-01T00:00:00.700Z",
            "event": {
              "history_event": {
                "event": {
                  "type": "stub",
                  "target_execution_id": "E_00000000000000000000000001.g:1_1",
                  "retval_hash": "011f9f1089426c4e2d1d6c761441181fba8e690f2baeccde7036a92c7d49d6b0e1",
                  "result": {
                    "Ok": null
                  }
                }
              }
            }
          }
        ],
        "execution_id": "E_00000000000000000000000001",
        "version": 4
      }
    },
    {
      "Append": {
        "execution_id": "E_00000000000000000000000001",
        "version": 5,
        "req": {
          "created_at": "1970-01-01T00:00:00.700Z",
          "event": {
            "history_event": {
              "event": {
                "type": "join_next",
                "join_set_id": "g:1",
                "run_expires_at": "1970-01-01T00:00:00.700Z",
                "requested_ffqn": null,
                "closing": false
              }
            }
          }
        }
      }
    },
    {
      "Append": {
        "execution_id": "E_00000000000000000000000001",
        "version": 6,
        "req": {
          "created_at": "1970-01-01T00:00:00.700Z",
          "event": {
            "finished": {
              "retval": {
                "ok": {
                  "type": "result<string, string>",
                  "value": {
                    "ok": "\"hello\""
                  }
                }
              },
              "http_client_traces": null
            }
          }
        }
      }
    }
  ]
}
